## Process this file with automake to produce Makefile.in

AUTOMAKE_OPTIONS = foreign
SUBDIRS = images

webdir = $(pkgdatadir)/web
dist_web_DATA = status.xsl \
                status2.xsl \
                status-json.xsl \
                style.css \
                auth.xsl \
                server_version.xsl \
                7.xsl \
                adminbar.html \
                statusbar.html \
                admin.html \
                index.html \
                xml2json.xslt \
                favicon.ico
